--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,50 @@
-Hi
+.header-content
+{
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+
+
+
+
+
+padding: 130px;
+
+}
+
+
+.nav-ul {
+display: flex;
+justify-content: space-around;
+color: white;
+background: #2C2723;
+list-style-type: none;
+padding: 10px;
+margin-bottom: 0;
+margin-top: 0
+}
+body {
+  background-color: white;
+  margin: 0;
+  background-image: url( ../img/iphone-background.jpg);
+  background-size: 100%;
+}
+ li {
+   list-style: none;
+
+ }
+ .header-link {
+   text-decoration: none;
+   color: black;
+
+
+ }
+ .header-links {
+   display: flex;
+   flex-direction: row;
+   width: 350px;
+   justify-content: space-between;
+
+
+ }
